# fluffmods

./: .gitignore  README.md  pyproject.toml
feeds/ras-list/: ask-for-risky-actions.md  ask-user-directly.md  ask-user-interactively.md  codex-delegation.md  concise-final-report.md  durable-handoff.md  exact-scope.md  feed.json  output-important-command-results.md  plan-complex-work.md  prefer-project-runbooks.md  protect-user-work.md  review-findings-first.md  verify-before-complete.md
src/fluffmods/: __init__.py  cli.py
src/fluffmods/feeds/ras-list/: ask-for-risky-actions.md  ask-user-interactively.md  build-with-subagents.md  codex-delegation.md  context-discipline.md  exact-scope.md  feed.json  output-important-command-results.md  plan-complex-work.md  prefer-project-runbooks.md  protect-user-work.md  review-findings-first.md  verify-before-complete.md
tests/: test_cli.py
