[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-FluffMods"
version = "0.1.0"
description = "AI + FluffMods: multi-agent guidance manager with curated feeds for Claude Code, Codex, and custom agent stanzas."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "ras" }
]
keywords = ["claude", "claude-code", "configuration", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rasatpetabit/fluffmods"
Issues = "https://github.com/rasatpetabit/fluffmods/issues"

[project.scripts]
ai-fluffmods = "fluffmods.cli:main"
fluffmods = "fluffmods.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fluffmods = ["feeds/ras-list/*.json", "feeds/ras-list/*.md"]
